--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "homepage": "https://gawlster.github.io/portfolio",
     "private": true,
     "dependencies": {
+        "@formkit/auto-animate": "^1.0.0-beta.5",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
