--- a/package.json
+++ b/package.json
@@ -1,54 +1,41 @@
 {
-    "name": "portfolio",
-    "version": "0.1.0",
-    "homepage": "https://gawlster.github.io/portfolio",
-    "private": true,
-    "dependencies": {
-        "@formkit/auto-animate": "^1.0.0-beta.5",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.2.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.0",
-        "@types/node": "^16.11.33",
-        "@types/react": "^18.0.8",
-        "@types/react-dom": "^18.0.3",
-        "@types/react-google-recaptcha": "^2.1.5",
-        "axios": "^0.27.2",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-google-recaptcha": "^2.1.0",
-        "react-scripts": "5.0.1",
-        "sass": "^1.51.0",
-        "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "gh-pages": "^4.0.0"
-    }
+  "name": "portfolio",
+  "version": "0.1.0",
+  "homepage": "https://gawlster.github.io/portfolio",
+  "private": true,
+  "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-google-recaptcha": "^2.1.8",
+    "gh-pages": "^4.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
